Fixed spacing for nav bar btn

--- a/frontend/estate-scout/src/app/navbar/navbar.component.css
+++ b/frontend/estate-scout/src/app/navbar/navbar.component.css
@@ -28,7 +28,7 @@ a {
   width: 70%;
   position: relative;
   height: 100%;
-  padding: 10px;
+  padding: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -36,7 +36,7 @@ a {
 
 .icon-box {
   position: relative;
-  width: 10%;
+  width: 11%;
   height: 100%;
   align-items: center;
   flex-direction: row;
@@ -57,7 +57,7 @@ a {
 
 .nav-menu-box {
   position: relative;
-  width: 90%;
+  width: 89%;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -89,7 +89,6 @@ a {
   position: relative;
   height: 45px;
   width: 125px;
-  margin: 10px 7px;
   padding: 5px 5px;
   font-weight: 600;
   font-size: 1rem;
